# IONOS-simple-chatbot

./: .env.template  .gitignore  =0.3.0  CNAME  CODE_OF_CONDUCT.md  README.md  docker-compose.yml  kubernetes_config.tpl  kubernetes_config.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  nextjs.yml
backend/: Dockerfile  chatbot_agent.py  main.py  requirements.txt  studio_client.py
backend/agents/: __init__.py  react_agent.py
backend/agents/Collectors/: __init__.py  document_collector.py  search_client.py  web_reader.py  web_scraper.py  web_search_collector.py
backend/agents/nodes/: __init__.py  context_merge_node.py  context_preparation_node.py  evidence_ranker_node.py  prepare_and_decide_node.py  reasoning_node.py  response_draft_node.py  response_generation_node.py  response_sufficiency_node.py  search_planner_node.py  (+3 more)
backend/utils/: __init__.py  citations.py  config.py  rag_initializer.py  ranking.py
chatClient/: package-lock.json  package.json
chatClient/app/: page.tsx
chatClient/components/: ApiKeyModal.tsx  ChatLog.tsx  Message.tsx  TextInput.tsx
docs/: next.config.mjs  package-lock.json  package.json  theme.config.tsx  tsconfig.json
docs/pages/: _app.tsx  index.tsx
docs/styles/: globals.css
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: ChatLog.tsx  Message.tsx  TextInput.tsx
frontend/public/: index.html
frontend/src/: App.css
frontends/next-js-starter/: package-lock.json
frontends/streamlit-starter/: Dockerfile  app.py  requirements.txt
streamlit/: app.py
(+30 files in other folders)
